--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "@mui/styled-engine-sc": "^5.12.0",
     "@testing-library/jest-dom": "^5.14.1",
@@ -17,6 +18,7 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.0.0-rc.1",
     "swiper": "^9.1.0",
+    "swr": "^2.1.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
